/*
 * Software License Agreement (BSD License)
 *
 *  Copyright (c) 2010, Willow Garage, Inc.
 *  All rights reserved.
 *
 *  Redistribution and use in source and binary forms, with or without
 *  modification, are permitted provided that the following conditions
 *  are met:
 *
 *   * Redistributions of source code must retain the above copyright
 *     notice, this list of conditions and the following disclaimer.
 *   * Redistributions in binary form must reproduce the above
 *     copyright notice, this list of conditions and the following
 *     disclaimer in the documentation and/or other materials provided
 *     with the distribution.
 *   * Neither the name of Willow Garage, Inc. nor the names of its
 *     contributors may be used to endorse or promote products derived
 *     from this software without specific prior written permission.
 *
 *  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 *  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 *  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
 *  FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
 *  COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
 *  INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
 *  BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 *  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 *  CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 *  LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
 *  ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 *  POSSIBILITY OF SUCH DAMAGE.
 *
 */

/**

\author Antonio Brandi

**/

#ifndef PCL_ROS__PCL_PIPELINE_HPP_
#define PCL_ROS__PCL_PIPELINE_HPP_

#include <memory>
#include <string>
#include <vector>
#include <unordered_map>
#include <any>

#include "rclcpp/rclcpp.hpp"
#include "pcl_ros/pcl_algorithm.hpp"
#include "pluginlib/class_loader.hpp"

namespace pcl_ros
{
class PCLPipeline : public PCLAlgorithm
{
public:
  using Ptr = std::shared_ptr<PCLPipeline>;
  using UniquePtr = std::unique_ptr<PCLPipeline>;

  /**
   * @brief Constructor
   */
  PCLPipeline();

  /**
   * @brief Destructor
   */
  ~PCLPipeline() override = default;

  /**
   * @brief Reads the YAML configuration to build the pipeline steps.
   */
  void onInitialize() override;

  /**
   * @brief Orchestrates the execution of the pipeline.
   */
  void compute(const std::vector<std::any> & inputs, std::vector<std::any> & outputs) override;

  /**
   * @brief Propagates parameter updates to all child algorithms.
   */
  rcl_interfaces::msg::SetParametersResult onParamsChanged(
    const std::vector<rclcpp::Parameter> & params) override;

private:
  struct AlgorithmStep
  {
    std::string instance_name;
    std::string plugin_type;
    std::vector<std::string> input_channels;  // Keys to read from registry
    std::vector<std::string> output_channels; // Keys to write to registry
    PCLAlgorithm::SharedPtr instance;
  };

  /**
   * @brief Mapping from the external compute() input index to internal registry keys.
   * Defined by parameter: "input_keys"
   */
  std::vector<std::string> input_keys_;

  /**
   * @brief Mapping from internal registry keys to the external compute() output index.
   * Defined by parameter: "output_keys"
   */
  std::vector<std::string> output_keys_;

  /**
   * @brief The sequence of algorithms to execute.
   */
  std::vector<AlgorithmStep> pipeline_steps_;

  /**
   * @brief Plugin loader. Must remain alive for plugins to work.
   */
  std::shared_ptr<pluginlib::ClassLoader<pcl_ros::PCLAlgorithm>> loader_;

  /**
   * @brief The Data Blackboard.
   * Stores Intermediate results (PointCloudPtr, IndicesPtr, etc.) as std::any.
   */
  std::unordered_map<std::string, std::any> channel_registry_;
};
}  // namespace pcl_ros


#endif  // PCL_ROS__PCL_PIPELINE_HPP_
